--- a/css.css
+++ b/css.css
@@ -34,7 +34,7 @@ body
 	position:        relative;
 	font-family:     Times;
 	font-size:       30px;
-	color:           #FFF;
+	color:           rgb(3, 84, 121);;
 	top:             210px;
 	left:            12px;
 }
