--- a/css.css
+++ b/css.css
@@ -32,7 +32,7 @@ body
 .headtitle
 {
 	position:        relative;
-	font-family:     Times;
+	font-family:     Lucida Sans Unicode;
 	font-size:       30px;
 	color:           #fff;
 	top:             210px;
